samples/_failures_safe/1761127701_705444_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0de08049.c: In function ‘main’:
./samples/SAFE/__tmp_0de08049.c:149:16: error: missing terminating " character
  149 |         printf("Compression failed
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0de08049.c:149:9: error: expected expression at end of input
  149 |         printf("Compression failed
      |         ^~~~~~
./samples/SAFE/__tmp_0de08049.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0de08049.c:149:9: error: expected declaration or statement at end of input
